ansible: add when statement in playbook

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,13 +7,33 @@
   - name: update repository index
     apt: 
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
   - name: install apache2 package
     apt:
       name: apache2
-      state: abscent
+      state: latest
+    when: ansible_distribution == "Ubuntu"
 
   - name: add php support for apache2 package
     apt:
-      name: libapache2-php
-      state: abscent
+      name: libapache2-mod-php
+      state: latest
+    when: ansible_distribution == "Ubuntu"
+
+  - name: update repository index
+    dnf: 
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: install httpd package
+    dnf:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "CentOS"
+
+  - name: add php support for httpd package
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
